feat: enable virtual threads

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=shopthing
 spring.datasource.url=jdbc:h2:mem:shopthingdev
+
+spring.threads.virtual.enabled=true
+spring.thread-executor=virtual
